--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,7 +3,18 @@
 <!-- Setup Google Analytics -->
 {% include head-custom-google-analytics.html %}
 
+<style>
+  header h1 {
+    font-size: 2.5rem; /* Reduce el tamaño para que quepa en una línea */
+    /* Puedes probar 2.4rem o 2.3rem si sigue sin caber */
+  }
+</style>
+
 <!-- You can set your favicon here -->
 <!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
-
+<!-- link rel="icon" type="image/png" href="{{ "/favicon.png" | relative_url }}" -->
+    
 <!-- end custom head snippets -->
+
+
+
